<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_activity_detail_course">Detail Course</string>

    <string name="title">Pikachu</string>
    <string name="description">Description</string>
    <string name="date">5 Oktober 2020</string>
    <string name="description_course">Deskripsi Kelas</string>
    <string name="example">Example</string>
    <string name="start_learn">Mulai Belajar</string>
    <string name="list_module">Daftar Modul</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="menu_bookmark">bookmark</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="last_seen">Terakhir dilihat</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="deadline_date">Deadline</string>
    <string name="share_text">Segera daftar kelas %s di dicoding.com</string>
    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="tv">TV Series</string>
    <string name="movie">Movie</string>
</resources>